--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -291,18 +291,24 @@
   }
   .product-image-info h4 {
     margin: 10px 0;
+    font-weight: bold;
   }
  .product-image-wrapper-sec .product-image-info {
-    position: absolute;
-    right: 0;
-    background: white;
-    border-radius: 15px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    width: 45%;
-    left: 46%;
-    top: 5%;
-    padding: 32px;
-    z-index: 4;
+     position: absolute;
+     right: 0;
+     background: #e5e5e5;
+     border-radius: 22px;
+     box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
+     width: 45%;
+     left: 46%;
+     top: 10%;
+     padding: 10px 25px;
+     z-index: 4;
+     text-align: center;
+  }
+  .product-image-wrapper-sec .img-wrap {
+      max-width: 156px;
+      margin: auto;
   }
   .product-image-wrapper-img {
     width: 55%;
@@ -337,6 +343,8 @@
     position: relative;
     z-index: 2;
     max-width: 100%;
+    width: 100%;
+    mix-blend-mode: darken;
   }
   .colorful-kicks-section .right {
     flex: 1;
