--- a/assets/base.css
+++ b/assets/base.css
@@ -267,6 +267,12 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   padding-left: 3rem;
   padding-right: 3rem;
 }
+a#togglePassword {
+  position: absolute;
+  right: 9px;
+  top: 11px;
+  z-index: 3;
+}
 
 @media screen and (min-width: 768px) {
   .page-width {
