--- a/sections/faq-contact.liquid
+++ b/sections/faq-contact.liquid
@@ -24,7 +24,7 @@
       font-weight: 600;
     }
   .faq-container.collapsible-content__wrapper .collapsible-content-wrapper-narrow .accordion details[open] summary .accordion__title {
-      color: #afa39a;
+      color: #b22525;
     }
    .faq-container.collapsible-content__wrapper .collapsible-content-wrapper-narrow .accordion details[open] {
      background: #f5f5f5d9;
