--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -39,6 +39,7 @@
 
 
                                     {% render 'header-mega-menu-content', link: link  %}
+                                    <p>Hello world</p>
 
                                     {%- for childlink in link.links -%}
                                         <li>
